Creating the 4 different pages, fixing the titles overflow, fixing the footer to stay at bottom even if there's no content, ending styles (by the moment)

--- a/styles/styles-no-nesting.css
+++ b/styles/styles-no-nesting.css
@@ -1,4 +1,9 @@
 /* ********** Header ********** */
+.header a {
+  text-decoration: none;
+  color: inherit;
+}
+
 @media screen and (min-width: 1024px) {
   .header {
     position: sticky;
@@ -57,6 +62,28 @@
   }
 }
 
+.active-page {
+  & .menu-btn-img {
+    background-color: var(--second-dark-color);
+    border-radius: 0.75rem;
+  }
+
+  &:hover {
+    & .menu-btn-img {
+      background-color: transparent;
+    }
+  }
+}
+
+.active-page .menu-btn-img {
+  background-color: var(--second-dark-color);
+  border-radius: 0.75rem;
+}
+
+.active-page:hover .menu-btn-img {
+  background-color: transparent;
+}
+
 /* ********** Container ********** */
 @media screen and (min-width: 624px) {
   .container {
@@ -76,6 +103,7 @@
 @media screen and (min-width: 1024px) {
   .container {
     padding: 2rem 0;
+    min-height: auto;
   }
 }
 
