--- a/styles/styles.css
+++ b/styles/styles.css
@@ -114,6 +114,10 @@ small {
   font-size: 0.75rem;
 }
 
+.h5-regular {
+  font-size: 0.8125rem;
+}
+
 /* *************** Background and Font Color *************** */
 
 .bg-fst {
@@ -162,6 +166,11 @@ small {
     position: sticky;
     top: 0;
     height: 4rem;
+  }
+
+  & a {
+    text-decoration: none;
+    color: inherit;
   }
 }
 
@@ -231,6 +240,19 @@ small {
   }
 }
 
+.active-page {
+  & .menu-btn-img {
+    background-color: var(--second-dark-color);
+    border-radius: 0.75rem;
+  }
+
+  &:hover {
+    & .menu-btn-img {
+      background-color: transparent;
+    }
+  }
+}
+
 /* ********** Container ********** */
 .container {
   display: flex;
@@ -241,6 +263,8 @@ small {
   margin-left: auto;
   margin-right: auto;
   padding: 1rem;
+
+  min-height: calc(100vh - var(--header-height) - 2rem);
 
   @media screen and (min-width: 624px) {
     flex-direction: row;
@@ -255,6 +279,7 @@ small {
 
   @media screen and (min-width: 1024px) {
     padding: 2rem 0;
+    min-height: auto;
   }
 }
 
@@ -498,13 +523,31 @@ small {
 /* ********** Card Total & Individual********** */
 
 .card-total,
-.card-individual {
+.card-individual,
+.card-user-info,
+.card-user-total,
+.card-user-amount {
   margin-top: 0.5rem;
   display: flex;
   flex-direction: column;
   padding: 1rem;
   border-radius: 0.5rem;
   gap: 1rem;
+}
+
+.card-user-info,
+.card-user-total {
+  margin-top: 0;
+}
+
+.card-user-info {
+  gap: 0.5rem;
+}
+
+.user-info {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 0.25rem;
 }
 
 /* ********** Element info ********** */
@@ -533,22 +576,25 @@ small {
 .element-data,
 .element-props,
 .element-days,
-.element-count {
+.element-count,
+.element-owned-info {
   display: flex;
 }
 
 .element-info,
 .element-props,
-.element-count {
+.element-count,
+.element-owned-info {
   justify-content: space-between;
 }
 
-.element-info {
+.element-info,
+.element-owned-info {
   max-height: 2.5rem;
 }
 
 .element-data {
-  max-width: 80%;
+  max-width: 85%;
   gap: 0.5rem;
 }
 
@@ -566,6 +612,7 @@ small {
 
 .element-props {
   flex-direction: column;
+  max-width: calc(100% - 3rem);
 
   & h5 {
     text-overflow: ellipsis;
@@ -587,6 +634,16 @@ small {
 /* ***** Faq ***** */
 
 .faq {
+  height: 0.6875rem;
+}
+
+.header-faq {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-faq .faq {
   height: 0.8125rem;
 }
 
@@ -596,7 +653,8 @@ small {
   gap: 1rem;
 }
 
-.btn-element {
+.btn-element,
+.btn-element-owned {
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -612,8 +670,18 @@ small {
   cursor: pointer;
 }
 
+.btn-element-owned {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 0.25rem;
+}
+
 .btn-edit {
   width: 0.75rem;
+}
+
+.btn-edit-owned {
+  width: 0.5rem;
 }
 
 .btn-delete {
